--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0042)https://achikuan.github.io/ML_shangjikao/ -->
+<!-- saved from url=(0042)https://kuangong.github.io/ML_shangjikao/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
